[package]
name = "lab-05"
version = "0.2.1"
edition = "2024"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
crossbeam-channel = "0.5"
rustls = "0.23"

[dev-dependencies]
ntest = "0.9"
kolmogorov_smirnov = "1.1"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = { version = "0.9", features = ["thread_rng"] }
# Note: we need an RC version to use with the newst `rand`
rsa = "0.10.0-rc.9"

[[bin]]
name = "lab05"
path = "main.rs"

[lints.rust]
unsafe_code = "forbid"
